# PSQLwrapper

./: .gitmodules  CMakeLists.txt
include/: PSQLWrapper.hpp
src/: MediaVector.cpp  PreferredAges.cpp  UserCountry.cpp  UserLanguage.cpp  addUser.cpp  getUser.cpp  initDB.cpp  removeUser.cpp  updateUser.cpp
